feat: Implement A/B testing for homepage buttons with flexible text options and anti-flicker protection
- Added native-split-enhanced.js for dual content version A/B testing using PostHog feature flags.
- Introduced anti-flicker.css to hide buttons initially and prevent flicker during variant assignment.
- Created button-ab-flexible.js for flexible button A/B testing, allowing different texts for control and test variants.
- Enhanced button-ab-flexible.css for styling buttons with hover states and loading indicators.
- Updated native-split-enhanced.js to track button clicks and experiment exposure with PostHog.
- Implemented robust error handling and logging throughout the scripts for better debugging.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun run build.js --dev"
   },
   "devDependencies": {
-    "bun": "^1.0.0"
+    "bun": "^1.0.0",
+    "esbuild": "^0.25.8"
   },
   "type": "module"
 }
